The layout is corrected with three columns and the property 'box-sizing: border-box' is added to all elements to avoid the horizontal scroll

--- a/style.css
+++ b/style.css
@@ -147,6 +147,10 @@ a {
                                                   HEADER
   ---------------------------------------------------------------------------------------------------- */
 
+* {
+  box-sizing: border-box;
+}
+
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -266,20 +270,18 @@ header {
 }
 
 .mini-news {
-  flex-basis: 50%;
+  flex-basis: 33.33%;
   flex-grow: 1;
   flex-shrink: 1;
   height: 639px;
   border: 1px solid black;
   color: black;
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: repeat(6, 638px);
 }
 
 .mini-news-children {
   background-color: rgb(200, 200, 200);
   border: 1px solid black;
+  height: 639px;
 }
 
 .more-articles {
